added apis, styling

--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -160,7 +160,7 @@ body
   display block
   height auto
   margin 0 auto
-  margin 2rem  
+  // margin 2rem  
   background-color white
 
   // overflow hidden
@@ -202,10 +202,10 @@ body
   overflow hidden
   padding 0
   margin 0 auto
-  // background-color white
-  min-height 14rem
+  background-color white
+  // min-height 14rem
   // max-height 16rem
-  margin-bottom 3rem
+  // margin-bottom 3rem
   // &:before
   //   content ""
   //   position absolute
@@ -227,8 +227,8 @@ body
 
 
   h3
-    font-size 2.3rem
-    font-weight 200
+    font-size 1.9rem
+    font-weight 400
     color rgba(black, 0.7)
     vertical-align bottom
     display inline-block
@@ -311,8 +311,8 @@ body
     // -webkit-align-content: stretch;
     // -ms-flex-line-pack: stretch;
     align-content: stretch;
-    // -webkit-box-align: stretch;
-    // -webkit-align-items: stretch;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
     // -ms-flex-align: stretch;
     align-items: stretch;
 
@@ -324,10 +324,10 @@ body
 // .flexChild{
 
 // }
-  // .search-result
-  //   flex-grow: 1;
-  //   width: 33%;
-    // display inline-block
+  .search-result
+    flex-grow: 1;
+    width: 25%;
+    display inline-block
     // width 33%
 
 // .search-result:hover
