--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -1,3 +1,5 @@
+@import "nib"
+
 @import "_normalize"
 
 
@@ -11,45 +13,88 @@ body
   font-size 1.6rem
   font-family: "aktiv-grotesk-std"
 
+
+a
+  background-color transparent
+
+
 .head-title
   color blue
 
 
-.header 
+
+.footer
+  position absolute
+  bottom 0
+  left 0
+  right 0
   text-align center
-  border-bottom 1px solid rgba(black, 0.1)
+
+  a
+    color black
+    font-size 1.2rem
+    text-transform uppercase
+    font-weight 400
+
+
+
+.header 
+  text-align left
+  // border-bottom 1px solid rgba(black, 0.1)
   overflow hidden
   height auto
+  z-index 10
+  // background-color rgba(white, 0.8)
+  // background linear-gradient(top, white, transparent)
+  position relative
+  left 0 
+  right 0
+  top 0
+  transition all 0.2s ease-in-out
+  // background: linear-gradient(top, white, transparent);
+  padding-top 5rem
+  padding-bottom 5rem
+  margin 0 auto
+  max-width 100rem
+  padding-left 3rem
+
+
+
 
 
 .header-title
+  transition all 0.2s ease-in-out
   display block
-  // width 20%
-  font-size 3.6rem
-  letter-spacing 1px
-  height 5rem
+  font-size 5.2rem
+  letter-spacing -2px
+  display inline-block
+  color white
   vertical-align top
-  font-weight 100
+  font-weight 600
+  padding 0 1rem 
   margin 0 auto
   color #111
-  line-height 2.4
-  color red
-  padding-left 1rem
+  line-height 1.4
   text-transform uppercase
-  margin-bottom 2rem
+
+
 
 
 
 .header-subtitle
   display block
+  transition all 0.2s ease-in-out
+
   max-width 50rem
   font-size 1.9rem
   font-weight 300
-  margin 0 auto
+  // margin 0 auto
   color rgba(black, 0.6)
-  padding 1rem
+  padding 1rem 1rem
 
 .header-form
+  transition all 0.2s ease-in-out
+  
   display block
   // float left
   // width 80%
@@ -58,7 +103,8 @@ body
   border none
   vertical-align top
   background-color transparent
-  margin 1rem
+  // margin 1rem
+  margin 2rem 1rem
 
   input
     -webkit-appearance none
@@ -67,14 +113,14 @@ body
     min-width 28rem
     height 4rem
     border-radius 0.4rem
-    background-color white
     outline none
     vertical-align top
 
     padding 0 1rem
     font-size 2rem
-    font-weight bold
+    font-weight 400
     border none
+    background-color rgba(white, 0.2)
     box-shadow inset 0 0 0 1px rgba(black, 0.1)
 
 
@@ -87,111 +133,44 @@ body
     // margin 2rem auto
     outline none
     border-radius 0.4rem
-    border none
+    border 1px solid rgba(black, 0.1)
     // box-shadow inset 0 0 0 2px rgba(black, 0.1)
     padding 0
-    background-color rgba(saturation(red, 77), 0.9)
-    color white
-    font-weight bold
+    background-color rgba(white, 0.3)
+    // background-color rgba(saturation(red, 77), 0.9)
+    color black
+    font-weight 500
     margin-left 1rem
+    // margin 1rem auto
     -webkit-font-rendering optimize-legibility
-
-    &:hover
-      // background-color rgba(white, 0.8)
-      
-
-.bottom-align
-  display: inline-block
-  height: 100%
-  vertical-align: bottom
-  width:1px
-
-.search-results
-  margin 0 
-  background-color darken(white, 2%)
-  padding 0
-
-  // padding 2rem
-
-
-.result-background
-  position absolute
-  background-size cover
-  background-position center
-  top 0
-  bottom 0
-  left -3rem
-  right -3rem
-  // transition all 0.25s ease-in-out
-  -webkit-filter blur(7px) saturate(1.4)
-  transform: scale(1.2)
-  opacity 0.1
-  z-index -3
 
 
 .result-image
-  position relative
-  // width 12rem
-  // height 9rem
-  // border-radius 50%
+  position absolute
+  pointer-events none
   display block
-  width 100%
-  padding-bottom 75%
-  height 0
-  // float left
-  // top 0
-  // bottom 0
-  // left -3rem
-  // right -3rem
+  width 200%
+  z-index 0
+  top -50%
+  height 200%
+  left -60%
+  background-color white
   background-size cover
-  // z-index -1
-  // box-shadow inset 0 0 0 0.1rem rgba(black, 0.1)
-
   background-position center
-  // transition all 0.25s ease-in-out
-  // -webkit-filter blur(7px) saturate(2)
-  // opacity 1
-  // z-index -3
+  -webkit-filter blur(70px) saturate(2)
+  transform translate3d(0,0,0)
 
 
 .result-container
   position relative
   max-width 70rem
   display block
-  height auto
+  height 100%
+  text-align center
   margin 0 auto
-  // margin 2rem  
-  background-color white
 
-  // overflow hidden
-  // background-color rgba(white, 0.7)
-  // border-radius 5rem
-  // box-shadow inset 0 0 0 1px rgba(black, 0.05)
+  padding 1rem
 
-  // border-bottom 1px solid rgba(black, 0.1)
-  // margin 0 1rem 1rem 1rem
-  // background linear-gradient(white, transparent)
-  // box-shadow inset 0 0 0 0.1rem rgba(black, 0.1)
-
-  // bottom 2rem
-  // left 2rem
-  // right 2rem
-  // position absolute
-  // background-color red
-  // top 2rem
-  // box-shadow inset 0 0 0 1px rgba(black, 0.3), 0 2px 4px rgba(black, 0.05)
-  // &:before
-  //   content: ""
-  //   background-color white
-  //   // background linear-gradient(left, white, black)
-  //   opacity 1
-  //   position absolute
-  //   z-index -1
-  //   top 2rem
-  //   bottom -2rem
-  //   left 0
-  //   right 0
-    
 .search-result
   list-style none
   display block
@@ -199,88 +178,101 @@ body
   position relative
   width 100%
   max-width 70rem
-  overflow hidden
   padding 0
+  text-decoration none
   margin 0 auto
-  background-color white
-  // min-height 14rem
-  // max-height 16rem
-  // margin-bottom 3rem
-  // &:before
-  //   content ""
-  //   position absolute
-  //   bottom 0
-  //   width 100%
-  //   width 50rem
-  //   // margin 0 auto
-  //   left 50%
-  //   margin-left -25rem
-  //   height 1px
-  //   background-color rgba(black, 0.1)
-  //   // box-shadow inset 0 -1px 0 0 rgba(black, 0.1)
 
-  // // 
+  &:before
+    content ""
+    position absolute
+    bottom 0
+    width 100%
+    height 100%
+    left 0
+    top 0
+    z-index 2
+    // background-color rgba(white, 0.65)
+    background-color rgba(white, 5)
 
-    
-  -webkit-transform translate3d(0,0,0)
+    // box-shadow 0 0.1rem 0.4rem rgba(black, 0.2)
 
+      
+
+
+  img
+    width 100%
+    height auto
+    z-index 2
+    position relative
 
 
   h3
     font-size 1.9rem
-    font-weight 400
-    color rgba(black, 0.7)
+    font-weight 300
+    color rgba(black, 0.95)
     vertical-align bottom
+    position: relative;
+    top: 50%;
+    transform: translateY(-0%);
     display inline-block
-    width 80%
-    // max-width 50rem
-    line-height 1.1
-    // margin 2rem
+    width 90%
+    z-index 3
+    position relative
+    line-height 1.4
     margin 0
-    // background-color rgba(white, 0.3)
-    padding 2rem 1rem
-    // margin-top 1rem
+    padding-bottom 3rem
+    margin-top 1rem
 
 
 
   .source
     color rgba(black, 0.7)
-    // position absolute
     font-size 1.1rem
     font-weight bold
-    position absolute
-    // float right
-    // margin-left 0.5rem
-    // background-color rgba(white, 0.3)
-    padding 1rem 0.3rem 0.7rem
-    // padding-bottom 0
     line-height 2.5
     vertical-align bottom
-
-    bottom 1rem
-    right 1rem
+    position relative
     text-transform uppercase
+    z-index 10
+    display block
+    position absolute
+    bottom 0.5rem
+    left 0
+    right 0
+    text-align center
+    // left 2rem
 
 
 .source-play
   display block
-  // float right
-  color rgba(black, 0.8)
   font-weight bold
   text-decoration none
   text-transform uppercase
   font-size 1.2rem
-  // background-color rgba(white, 0.7) 
   display inline-block
-  // box-shadow 0 0 0 1px rgba(black, 0.2)
   padding 0.5rem 1rem
-  // border-radius 50%
-  // position absolute 
-  // left 6rem
-  // top 50%
-  // height 4rem
-  // width 4rem
-  // background-color white
+
+
+
+
+footer
+  position absolute
+  bottom 0
+  left 0
+  right 0
+  text-align left
+
+  .footer-wrap
+    max-width 100rem
+    margin 0 auto
+    padding-left 4rem
+    
+  p, a
+    font-weight 300
+    
+
+  a
+    color black
 
 
 
@@ -289,47 +281,21 @@ body
   .search-results
     display: flex; /* or inline-flex */
     flex-flow: row wrap;
-    
-  /* Then we define how is distributed the remaining space */
-    // justify-content: space-around;
-    // display: -webkit-box;
-    // display: -ms-flexbox;
-    // display: -webkit-flex;
-    // display: flex;
-    // -webkit-box-direction: normal;
-    // -webkit-box-orient: horizontal;
-    // -webkit-flex-direction: row;
-    // -ms-flex-direction: row;
-    // flex-direction: row;
-    // -webkit-flex-wrap: nowrap;
-    // -ms-flex-wrap: nowrap;
+    margin 0 auto
     flex-wrap: wrap;
-    // -webkit-box-pack: start;
-    // -webkit-justify-content: flex-start;
-    // -ms-flex-pack: start;
-    // justify-content: flex-start;
-    // -webkit-align-content: stretch;
-    // -ms-flex-line-pack: stretch;
+    margin-left 10%
+
     align-content: stretch;
     -webkit-box-align: stretch;
     -webkit-align-items: stretch;
-    // -ms-flex-align: stretch;
     align-items: stretch;
+    margin-top 0.5rem
+    max-width 100rem
+    
 
-    // -webkit-box-orient: vertical;
-    // -webkit-flex-direction: column;
-    // -ms-flex-direction: column;
-    // flex-direction: column;
-
-// .flexChild{
-
-// }
   .search-result
-    flex-grow: 1;
-    width: 25%;
-    display inline-block
-    // width 33%
+    width calc(25% - 2rem)
+    // box-shadow inset 0 0 0 1px rgba(black, 0.15)
 
-// .search-result:hover
-//   & .result-image
-//     -webkit-filter blur(0)
+    display inline-block
+    margin 1rem
