--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -52,8 +52,8 @@ a
   top 0
   transition all 0.2s ease-in-out
   // background: linear-gradient(top, white, transparent);
-  padding-top 5rem
-  padding-bottom 5rem
+  padding-top 15rem
+  padding-bottom 3rem
   margin 0 auto
   max-width 100rem
   padding-left 3rem
@@ -145,6 +145,20 @@ a
     -webkit-font-rendering optimize-legibility
 
 
+.bg-images
+  position absolute
+  top 10%
+  left 0
+  right 0
+
+
+.bg-item
+  display inline-block
+  width 25%
+  padding-bottom 30%
+  margin-left -4px
+  position relative
+
 .result-image
   position absolute
   pointer-events none
@@ -159,6 +173,50 @@ a
   background-position center
   -webkit-filter blur(70px) saturate(2)
   transform translate3d(0,0,0)
+
+
+
+
+.search-filters
+  padding 0
+  margin 0
+  margin-left 1rem
+
+  &:before
+    content : "search on: "
+    text-transform uppercase
+    font-size 1.2rem
+    font-weight 500
+    opacity 0.9
+    margin-right 2rem
+
+.filter
+  margin-right 1rem
+  margin-left 0
+  padding 0
+  display inline-block
+  position relative
+  border-radius 0.2rem
+  background-color rgba(white, 0.2)
+  padding 0.1rem 0.5rem 0.2rem
+
+  opacity 0.3
+
+  input
+    opacity 0
+    position absolute
+
+
+  span
+    text-transform uppercase
+    font-size 1.2rem
+    font-weight 500
+
+  &.checked
+    opacity 1
+
+
+  
 
 
 .result-container
@@ -181,6 +239,7 @@ a
   padding 0
   text-decoration none
   margin 0 auto
+  border-radius 0.1rem
 
   &:before
     content ""
@@ -191,10 +250,9 @@ a
     left 0
     top 0
     z-index 2
-    // background-color rgba(white, 0.65)
-    background-color rgba(white, 5)
+    background-color rgba(white, 0.35)
 
-    // box-shadow 0 0.1rem 0.4rem rgba(black, 0.2)
+    box-shadow 0 0.1rem 0.4rem rgba(black, 0.25)
 
       
 
@@ -207,21 +265,22 @@ a
 
 
   h3
-    font-size 1.9rem
+    font-size 2rem
     font-weight 300
     color rgba(black, 0.95)
     vertical-align bottom
     position: relative;
-    top: 50%;
+    text-align right
+    // top: 50%;
     transform: translateY(-0%);
     display inline-block
-    width 90%
+    width 100%
     z-index 3
     position relative
     line-height 1.4
     margin 0
-    padding-bottom 3rem
-    margin-top 1rem
+    padding-bottom 2.2rem
+    margin-top 0.5rem
 
 
 
@@ -229,17 +288,18 @@ a
     color rgba(black, 0.7)
     font-size 1.1rem
     font-weight bold
-    line-height 2.5
+    line-height 1
     vertical-align bottom
     position relative
     text-transform uppercase
     z-index 10
     display block
     position absolute
-    bottom 0.5rem
+    bottom 1rem
+    // padding 1rem
     left 0
-    right 0
-    text-align center
+    right 1rem
+    text-align right
     // left 2rem
 
 
@@ -256,11 +316,13 @@ a
 
 
 footer
-  position absolute
+  position relative
   bottom 0
   left 0
   right 0
   text-align left
+  margin-left 1rem
+  margin-top 10rem
 
   .footer-wrap
     max-width 100rem
@@ -283,14 +345,15 @@ footer
     flex-flow: row wrap;
     margin 0 auto
     flex-wrap: wrap;
-    margin-left 10%
+    // margin-left 10%
 
     align-content: stretch;
     -webkit-box-align: stretch;
     -webkit-align-items: stretch;
     align-items: stretch;
     margin-top 0.5rem
-    max-width 100rem
+
+    max-width 102rem
     
 
   .search-result
