--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -196,9 +196,9 @@ a
   padding 0
   display inline-block
   position relative
-  border-radius 0.2rem
+  border-radius 0.4rem
   background-color rgba(white, 0.2)
-  padding 0.1rem 0.5rem 0.2rem
+  padding 0.1rem 0.7rem 0.3rem
 
   opacity 0.3
 
@@ -335,6 +335,10 @@ footer
 
   a
     color black
+    background-color rgba(white, 0.2)
+    border-radius 0.4rem
+    padding 0.1rem 0.4rem 0.3rem
+    display inline-block
 
 
 
