--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -270,7 +270,7 @@ a
     color rgba(black, 0.95)
     vertical-align bottom
     position: relative;
-    text-align right
+    text-align left
     // top: 50%;
     transform: translateY(-0%);
     display inline-block
@@ -297,7 +297,7 @@ a
     position absolute
     bottom 1rem
     // padding 1rem
-    left 0
+    left 1rem
     right 1rem
     text-align right
     // left 2rem
@@ -351,10 +351,12 @@ footer
     flex-wrap: wrap;
     // margin-left 10%
 
-    align-content: stretch;
+    // align-content: stretch;
+    align-content: space-around;
+      
     -webkit-box-align: stretch;
     -webkit-align-items: stretch;
-    align-items: stretch;
+    // align-items: stretch;
     margin-top 0.5rem
 
     max-width 102rem
