--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -73,7 +73,7 @@ a
   padding 0 1rem 
   margin 0 auto
   color #111
-  line-height 1.4
+  line-height 1
   text-transform uppercase
 
 
@@ -323,26 +323,26 @@ a
     transition all 0.2s ease-out
     left 1rem
     right 1rem
-    transform translateX(-2.5rem)
+    // transform translateX(-2.5rem)
     
-    &:before
-      content: "open on "
-      opacity 0
+    // &:before
+    //   content: "open on "
+    //   opacity 0
       
-      transition all 0.2s ease-out
+    //   transition all 0.2s ease-out
 
-      display inline-block
-      transform translateX(2rem)
+    //   display inline-block
+    //   transform translateX(2rem)
       
     
-.search-result
-  &:hover
-    background-color red
-    .source
-      transform translateX(0)
-        &:before
-          opacity 1
-          transform translateX(-0.2rem)
+// .search-result
+//   &:hover
+//     background-color red
+//     .source
+//       transform translateX(0)
+//         &:before
+//           opacity 1
+//           transform translateX(-0.2rem)
       
       
       
