--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -323,6 +323,11 @@ a
     transition all 0.2s ease-out
     left 1rem
     right 1rem
+
+    
+    a
+      color inherit
+      text-decoration none
     // transform translateX(-2.5rem)
     
     // &:before
