--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -376,12 +376,15 @@ footer
   text-align left
   margin-left 1rem
   margin-top 10rem
+  
 
   .footer-wrap
     max-width 100rem
     margin 0 auto
     padding-left 4rem
     
+  p
+    color rgba(0, 0, 0, 0.6)
   p, a
     font-weight 300
     
