--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -12,8 +12,12 @@ html
 body
   font-size 1.6rem
   font-family: "aktiv-grotesk-std"
+  over
 
 
+
+html, body
+  overflow-x hidden
 a
   background-color transparent
 
