--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -112,6 +112,8 @@ a
 
   input
     -webkit-appearance none
+    appearance none
+    
     display inline-block
     width 40%
     min-width 28rem
@@ -179,6 +181,10 @@ a
   background-size cover
   background-position center
   -webkit-filter blur(70px) saturate(2)
+  -moz-filter blur(70px) saturate(2)
+  filter blur(70px) saturate(2)
+  
+  
   transform translate3d(0,0,0)
 
 
