--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -180,6 +180,7 @@ a
   background-color white
   background-size cover
   background-position center
+  filter  url(blur.svg#blur)
   -webkit-filter blur(70px) saturate(2)
   -moz-filter blur(70px) saturate(2)
   filter blur(70px) saturate(2)
